y.output
State 5 conflicts: 2 shift/reduce
State 120 conflicts: 2 shift/reduce
State 125 conflicts: 1 reduce/reduce
State 133 conflicts: 2 shift/reduce
State 138 conflicts: 2 shift/reduce
State 143 conflicts: 2 shift/reduce


Grammar

    0 $accept: S $end

    1 S: INICIO CMDS FINAIS
    2  | INICIO CMDS
    3  | INICIO

    4 INICIO: ε
    5       | FINAIS

    6 CMDS: CMD
    7     | CMDS FINAIS CMD

    8 FINAIS: FIM
    9       | FINAIS FIM

   10 FIM: '\n'
   11    | ';'

   12 QUEBRAS: ε
   13        | QUEBRAS '\n'

   14 CMD: E
   15    | D
   16    | BLOCO
   17    | IF
   18    | WHILE
   19    | DO_WHILE
   20    | FOR
   21    | BREAK
   22    | CONTINUE
   23    | CIN
   24    | COUT
   25    | SWITCH

   26 ABRE_BLOCO: '{'

   27 FECHA_BLOCO: '}'

   28 BLOCO: ABRE_BLOCO INICIO FECHA_BLOCO
   29      | ABRE_BLOCO INICIO CMDS FECHA_BLOCO
   30      | ABRE_BLOCO INICIO CMDS FINAIS FECHA_BLOCO

   31 IF: TK_IF '(' E ')' BLOCO
   32   | TK_IF '(' E ')' BLOCO QUEBRAS TK_ELSE BLOCO

   33 INICIO_WHILE: TK_WHILE

   34 WHILE: INICIO_WHILE '(' E ')' BLOCO

   35 INICIO_DO: TK_DO

   36 DO_WHILE: INICIO_DO BLOCO QUEBRAS TK_WHILE '(' E ')'

   37 ABRE_FOR: TK_FOR '('

   38 FOR: ABRE_FOR D ';' E ';' ATRIB ')' QUEBRAS BLOCO

   39 INICIO_SWITCH: TK_SWITCH '(' E ')' '{'

   40 SWITCH: INICIO_SWITCH INICIO CASES INICIO '}'

   41 CASES: CASE_ITEM
   42      | CASES CASE_ITEM

   43 CASE_ITEM: TK_CASE VALOR ':' CORPO_CASE
   44          | TK_DEFAULT ':' CORPO_CASE

   45 CORPO_CASE: INICIO
   46           | INICIO CMDS
   47           | INICIO CMDS FINAIS

   48 BREAK: TK_BREAK

   49 CONTINUE: TK_CONTINUE

   50 TIPO: TK_INT
   51     | TK_BOOL
   52     | TK_FLOAT
   53     | TK_CHAR
   54     | TK_STRING

   55 VALOR: TK_TRUE
   56      | TK_FALSE
   57      | TK_LETTER
   58      | TK_NUM
   59      | TK_FLOAT_LIT
   60      | TK_STRING_LIT

   61 CIN: TK_CIN TK_RR TK_ID

   62 COUT: TK_COUT TK_LL TK_ID
   63     | TK_COUT TK_LL TK_STRING_LIT

   64 E: E '+' E
   65  | E '-' E
   66  | E '*' E
   67  | E '/' E
   68  | '(' E ')'
   69  | '-' E
   70  | '(' TIPO ')' E
   71  | E TK_RELACIONAL E
   72  | E TK_OR E
   73  | E TK_AND E
   74  | TK_NOT E
   75  | TK_ID
   76  | VALOR

   77 D: TIPO TK_ID
   78  | ATRIB
   79  | TIPO TK_ID '=' E

   80 ATRIB: TK_ID '=' E
   81      | TK_ID TK_PP
   82      | TK_ID TK_MM


Terminals, with rules where they appear

    $end (0) 0
    '\n' (10) 10 13
    '(' (40) 31 32 34 36 37 39 68 70
    ')' (41) 31 32 34 36 38 39 68 70
    '*' (42) 66
    '+' (43) 64
    '-' (45) 65 69
    '/' (47) 67
    ':' (58) 43 44
    ';' (59) 11 38
    '=' (61) 79 80
    '{' (123) 26 39
    '}' (125) 27 40
    error (256)
    TK_NUM (258) 58
    TK_ID (259) 61 62 75 77 79 80 81 82
    TK_INT (260) 50
    TK_FLOAT (261) 52
    TK_CHAR (262) 53
    TK_LETTER (263) 57
    TK_TRUE (264) 55
    TK_FALSE (265) 56
    TK_BOOL (266) 51
    TK_FLOAT_LIT (267) 59
    TK_RELACIONAL (268) 71
    TK_OR (269) 72
    TK_NOT (270) 74
    TK_AND (271) 73
    TK_IF (272) 31 32
    TK_WHILE (273) 33 36
    TK_DO (274) 35
    TK_ELSE (275) 32
    TK_FOR (276) 37
    TK_BREAK (277) 48
    TK_CONTINUE (278) 49
    TK_CIN (279) 61
    TK_COUT (280) 62 63
    TK_LL (281) 62 63
    TK_RR (282) 61
    TK_STRING (283) 54
    TK_STRING_LIT (284) 60 63
    TK_DEFAULT (285) 44
    TK_CASE (286) 43
    TK_SWITCH (287) 39
    TK_PP (288) 81
    TK_MM (289) 82
    TK_CAST (290)
    TK_NEG (291)


Nonterminals, with rules where they appear

    $accept (49)
        on left: 0
    S (50)
        on left: 1 2 3
        on right: 0
    INICIO (51)
        on left: 4 5
        on right: 1 2 3 28 29 30 40 45 46 47
    CMDS (52)
        on left: 6 7
        on right: 1 2 7 29 30 46 47
    FINAIS (53)
        on left: 8 9
        on right: 1 5 7 9 30 47
    FIM (54)
        on left: 10 11
        on right: 8 9
    QUEBRAS (55)
        on left: 12 13
        on right: 13 32 36 38
    CMD (56)
        on left: 14 15 16 17 18 19 20 21 22 23 24 25
        on right: 6 7
    ABRE_BLOCO (57)
        on left: 26
        on right: 28 29 30
    FECHA_BLOCO (58)
        on left: 27
        on right: 28 29 30
    BLOCO (59)
        on left: 28 29 30
        on right: 16 31 32 34 36 38
    IF (60)
        on left: 31 32
        on right: 17
    INICIO_WHILE (61)
        on left: 33
        on right: 34
    WHILE (62)
        on left: 34
        on right: 18
    INICIO_DO (63)
        on left: 35
        on right: 36
    DO_WHILE (64)
        on left: 36
        on right: 19
    ABRE_FOR (65)
        on left: 37
        on right: 38
    FOR (66)
        on left: 38
        on right: 20
    INICIO_SWITCH (67)
        on left: 39
        on right: 40
    SWITCH (68)
        on left: 40
        on right: 25
    CASES (69)
        on left: 41 42
        on right: 40 42
    CASE_ITEM (70)
        on left: 43 44
        on right: 41 42
    CORPO_CASE (71)
        on left: 45 46 47
        on right: 43 44
    BREAK (72)
        on left: 48
        on right: 21
    CONTINUE (73)
        on left: 49
        on right: 22
    TIPO (74)
        on left: 50 51 52 53 54
        on right: 70 77 79
    VALOR (75)
        on left: 55 56 57 58 59 60
        on right: 43 76
    CIN (76)
        on left: 61
        on right: 23
    COUT (77)
        on left: 62 63
        on right: 24
    E (78)
        on left: 64 65 66 67 68 69 70 71 72 73 74 75 76
        on right: 14 31 32 34 36 38 39 64 65 66 67 68 69 70 71 72 73 74 79 80
    D (79)
        on left: 77 78 79
        on right: 15 38
    ATRIB (80)
        on left: 80 81 82
        on right: 38 78


State 0

    0 $accept: • S $end

    '\n'  shift, and go to state 1
    ';'   shift, and go to state 2

    $default  reduce using rule 4 (INICIO)

    S       go to state 3
    INICIO  go to state 4
    FINAIS  go to state 5
    FIM     go to state 6


State 1

   10 FIM: '\n' •

    $default  reduce using rule 10 (FIM)


State 2

   11 FIM: ';' •

    $default  reduce using rule 11 (FIM)


State 3

    0 $accept: S • $end

    $end  shift, and go to state 7


State 4

    1 S: INICIO • CMDS FINAIS
    2  | INICIO • CMDS
    3  | INICIO •

    TK_NUM         shift, and go to state 8
    TK_ID          shift, and go to state 9
    TK_INT         shift, and go to state 10
    TK_FLOAT       shift, and go to state 11
    TK_CHAR        shift, and go to state 12
    TK_LETTER      shift, and go to state 13
    TK_TRUE        shift, and go to state 14
    TK_FALSE       shift, and go to state 15
    TK_BOOL        shift, and go to state 16
    TK_FLOAT_LIT   shift, and go to state 17
    TK_NOT         shift, and go to state 18
    TK_IF          shift, and go to state 19
    TK_WHILE       shift, and go to state 20
    TK_DO          shift, and go to state 21
    TK_FOR         shift, and go to state 22
    TK_BREAK       shift, and go to state 23
    TK_CONTINUE    shift, and go to state 24
    TK_CIN         shift, and go to state 25
    TK_COUT        shift, and go to state 26
    TK_STRING      shift, and go to state 27
    TK_STRING_LIT  shift, and go to state 28
    TK_SWITCH      shift, and go to state 29
    '-'            shift, and go to state 30
    '{'            shift, and go to state 31
    '('            shift, and go to state 32

    $default  reduce using rule 3 (S)

    CMDS           go to state 33
    CMD            go to state 34
    ABRE_BLOCO     go to state 35
    BLOCO          go to state 36
    IF             go to state 37
    INICIO_WHILE   go to state 38
    WHILE          go to state 39
    INICIO_DO      go to state 40
    DO_WHILE       go to state 41
    ABRE_FOR       go to state 42
    FOR            go to state 43
    INICIO_SWITCH  go to state 44
    SWITCH         go to state 45
    BREAK          go to state 46
    CONTINUE       go to state 47
    TIPO           go to state 48
    VALOR          go to state 49
    CIN            go to state 50
    COUT           go to state 51
    E              go to state 52
    D              go to state 53
    ATRIB          go to state 54


State 5

    5 INICIO: FINAIS •
    9 FINAIS: FINAIS • FIM

    '\n'  shift, and go to state 1
    ';'   shift, and go to state 2

    '\n'      [reduce using rule 5 (INICIO)]
    ';'       [reduce using rule 5 (INICIO)]
    $default  reduce using rule 5 (INICIO)

    FIM  go to state 55


State 6

    8 FINAIS: FIM •

    $default  reduce using rule 8 (FINAIS)


State 7

    0 $accept: S $end •

    $default  accept


State 8

   58 VALOR: TK_NUM •

    $default  reduce using rule 58 (VALOR)


State 9

   75 E: TK_ID •
   80 ATRIB: TK_ID • '=' E
   81      | TK_ID • TK_PP
   82      | TK_ID • TK_MM

    TK_PP  shift, and go to state 56
    TK_MM  shift, and go to state 57
    '='    shift, and go to state 58

    $default  reduce using rule 75 (E)


State 10

   50 TIPO: TK_INT •

    $default  reduce using rule 50 (TIPO)


State 11

   52 TIPO: TK_FLOAT •

    $default  reduce using rule 52 (TIPO)


State 12

   53 TIPO: TK_CHAR •

    $default  reduce using rule 53 (TIPO)


State 13

   57 VALOR: TK_LETTER •

    $default  reduce using rule 57 (VALOR)


State 14

   55 VALOR: TK_TRUE •

    $default  reduce using rule 55 (VALOR)


State 15

   56 VALOR: TK_FALSE •

    $default  reduce using rule 56 (VALOR)


State 16

   51 TIPO: TK_BOOL •

    $default  reduce using rule 51 (TIPO)


State 17

   59 VALOR: TK_FLOAT_LIT •

    $default  reduce using rule 59 (VALOR)


State 18

   74 E: TK_NOT • E

    TK_NUM         shift, and go to state 8
    TK_ID          shift, and go to state 59
    TK_LETTER      shift, and go to state 13
    TK_TRUE        shift, and go to state 14
    TK_FALSE       shift, and go to state 15
    TK_FLOAT_LIT   shift, and go to state 17
    TK_NOT         shift, and go to state 18
    TK_STRING_LIT  shift, and go to state 28
    '-'            shift, and go to state 30
    '('            shift, and go to state 32

    VALOR  go to state 49
    E      go to state 60


State 19

   31 IF: TK_IF • '(' E ')' BLOCO
   32   | TK_IF • '(' E ')' BLOCO QUEBRAS TK_ELSE BLOCO

    '('  shift, and go to state 61


State 20

   33 INICIO_WHILE: TK_WHILE •

    $default  reduce using rule 33 (INICIO_WHILE)


State 21

   35 INICIO_DO: TK_DO •

    $default  reduce using rule 35 (INICIO_DO)


State 22

   37 ABRE_FOR: TK_FOR • '('

    '('  shift, and go to state 62


State 23

   48 BREAK: TK_BREAK •

    $default  reduce using rule 48 (BREAK)


State 24

   49 CONTINUE: TK_CONTINUE •

    $default  reduce using rule 49 (CONTINUE)


State 25

   61 CIN: TK_CIN • TK_RR TK_ID

    TK_RR  shift, and go to state 63


State 26

   62 COUT: TK_COUT • TK_LL TK_ID
   63     | TK_COUT • TK_LL TK_STRING_LIT

    TK_LL  shift, and go to state 64


State 27

   54 TIPO: TK_STRING •

    $default  reduce using rule 54 (TIPO)


State 28

   60 VALOR: TK_STRING_LIT •

    $default  reduce using rule 60 (VALOR)


State 29

   39 INICIO_SWITCH: TK_SWITCH • '(' E ')' '{'

    '('  shift, and go to state 65


State 30

   69 E: '-' • E

    TK_NUM         shift, and go to state 8
    TK_ID          shift, and go to state 59
    TK_LETTER      shift, and go to state 13
    TK_TRUE        shift, and go to state 14
    TK_FALSE       shift, and go to state 15
    TK_FLOAT_LIT   shift, and go to state 17
    TK_NOT         shift, and go to state 18
    TK_STRING_LIT  shift, and go to state 28
    '-'            shift, and go to state 30
    '('            shift, and go to state 32

    VALOR  go to state 49
    E      go to state 66


State 31

   26 ABRE_BLOCO: '{' •

    $default  reduce using rule 26 (ABRE_BLOCO)


State 32

   68 E: '(' • E ')'
   70  | '(' • TIPO ')' E

    TK_NUM         shift, and go to state 8
    TK_ID          shift, and go to state 59
    TK_INT         shift, and go to state 10
    TK_FLOAT       shift, and go to state 11
    TK_CHAR        shift, and go to state 12
    TK_LETTER      shift, and go to state 13
    TK_TRUE        shift, and go to state 14
    TK_FALSE       shift, and go to state 15
    TK_BOOL        shift, and go to state 16
    TK_FLOAT_LIT   shift, and go to state 17
    TK_NOT         shift, and go to state 18
    TK_STRING      shift, and go to state 27
    TK_STRING_LIT  shift, and go to state 28
    '-'            shift, and go to state 30
    '('            shift, and go to state 32

    TIPO   go to state 67
    VALOR  go to state 49
    E      go to state 68


State 33

    1 S: INICIO CMDS • FINAIS
    2  | INICIO CMDS •
    7 CMDS: CMDS • FINAIS CMD

    '\n'  shift, and go to state 1
    ';'   shift, and go to state 2

    $default  reduce using rule 2 (S)

    FINAIS  go to state 69
    FIM     go to state 6


State 34

    6 CMDS: CMD •

    $default  reduce using rule 6 (CMDS)


State 35

   28 BLOCO: ABRE_BLOCO • INICIO FECHA_BLOCO
   29      | ABRE_BLOCO • INICIO CMDS FECHA_BLOCO
   30      | ABRE_BLOCO • INICIO CMDS FINAIS FECHA_BLOCO

    '\n'  shift, and go to state 1
    ';'   shift, and go to state 2

    $default  reduce using rule 4 (INICIO)

    INICIO  go to state 70
    FINAIS  go to state 5
    FIM     go to state 6


State 36

   16 CMD: BLOCO •

    $default  reduce using rule 16 (CMD)


State 37

   17 CMD: IF •

    $default  reduce using rule 17 (CMD)


State 38

   34 WHILE: INICIO_WHILE • '(' E ')' BLOCO

    '('  shift, and go to state 71


State 39

   18 CMD: WHILE •

    $default  reduce using rule 18 (CMD)


State 40

   36 DO_WHILE: INICIO_DO • BLOCO QUEBRAS TK_WHILE '(' E ')'

    '{'  shift, and go to state 31

    ABRE_BLOCO  go to state 35
    BLOCO       go to state 72


State 41

   19 CMD: DO_WHILE •

    $default  reduce using rule 19 (CMD)


State 42

   38 FOR: ABRE_FOR • D ';' E ';' ATRIB ')' QUEBRAS BLOCO

    TK_ID      shift, and go to state 73
    TK_INT     shift, and go to state 10
    TK_FLOAT   shift, and go to state 11
    TK_CHAR    shift, and go to state 12
    TK_BOOL    shift, and go to state 16
    TK_STRING  shift, and go to state 27

    TIPO   go to state 48
    D      go to state 74
    ATRIB  go to state 54


State 43

   20 CMD: FOR •

    $default  reduce using rule 20 (CMD)


State 44

   40 SWITCH: INICIO_SWITCH • INICIO CASES INICIO '}'

    '\n'  shift, and go to state 1
    ';'   shift, and go to state 2

    $default  reduce using rule 4 (INICIO)

    INICIO  go to state 75
    FINAIS  go to state 5
    FIM     go to state 6


State 45

   25 CMD: SWITCH •

    $default  reduce using rule 25 (CMD)


State 46

   21 CMD: BREAK •

    $default  reduce using rule 21 (CMD)


State 47

   22 CMD: CONTINUE •

    $default  reduce using rule 22 (CMD)


State 48

   77 D: TIPO • TK_ID
   79  | TIPO • TK_ID '=' E

    TK_ID  shift, and go to state 76


State 49

   76 E: VALOR •

    $default  reduce using rule 76 (E)


State 50

   23 CMD: CIN •

    $default  reduce using rule 23 (CMD)


State 51

   24 CMD: COUT •

    $default  reduce using rule 24 (CMD)


State 52

   14 CMD: E •
   64 E: E • '+' E
   65  | E • '-' E
   66  | E • '*' E
   67  | E • '/' E
   71  | E • TK_RELACIONAL E
   72  | E • TK_OR E
   73  | E • TK_AND E

    TK_RELACIONAL  shift, and go to state 77
    TK_OR          shift, and go to state 78
    TK_AND         shift, and go to state 79
    '+'            shift, and go to state 80
    '-'            shift, and go to state 81
    '*'            shift, and go to state 82
    '/'            shift, and go to state 83

    $default  reduce using rule 14 (CMD)


State 53

   15 CMD: D •

    $default  reduce using rule 15 (CMD)


State 54

   78 D: ATRIB •

    $default  reduce using rule 78 (D)


State 55

    9 FINAIS: FINAIS FIM •

    $default  reduce using rule 9 (FINAIS)


State 56

   81 ATRIB: TK_ID TK_PP •

    $default  reduce using rule 81 (ATRIB)


State 57

   82 ATRIB: TK_ID TK_MM •

    $default  reduce using rule 82 (ATRIB)


State 58

   80 ATRIB: TK_ID '=' • E

    TK_NUM         shift, and go to state 8
    TK_ID          shift, and go to state 59
    TK_LETTER      shift, and go to state 13
    TK_TRUE        shift, and go to state 14
    TK_FALSE       shift, and go to state 15
    TK_FLOAT_LIT   shift, and go to state 17
    TK_NOT         shift, and go to state 18
    TK_STRING_LIT  shift, and go to state 28
    '-'            shift, and go to state 30
    '('            shift, and go to state 32

    VALOR  go to state 49
    E      go to state 84


State 59

   75 E: TK_ID •

    $default  reduce using rule 75 (E)


State 60

   64 E: E • '+' E
   65  | E • '-' E
   66  | E • '*' E
   67  | E • '/' E
   71  | E • TK_RELACIONAL E
   72  | E • TK_OR E
   73  | E • TK_AND E
   74  | TK_NOT E •

    $default  reduce using rule 74 (E)


State 61

   31 IF: TK_IF '(' • E ')' BLOCO
   32   | TK_IF '(' • E ')' BLOCO QUEBRAS TK_ELSE BLOCO

    TK_NUM         shift, and go to state 8
    TK_ID          shift, and go to state 59
    TK_LETTER      shift, and go to state 13
    TK_TRUE        shift, and go to state 14
    TK_FALSE       shift, and go to state 15
    TK_FLOAT_LIT   shift, and go to state 17
    TK_NOT         shift, and go to state 18
    TK_STRING_LIT  shift, and go to state 28
    '-'            shift, and go to state 30
    '('            shift, and go to state 32

    VALOR  go to state 49
    E      go to state 85


State 62

   37 ABRE_FOR: TK_FOR '(' •

    $default  reduce using rule 37 (ABRE_FOR)


State 63

   61 CIN: TK_CIN TK_RR • TK_ID

    TK_ID  shift, and go to state 86


State 64

   62 COUT: TK_COUT TK_LL • TK_ID
   63     | TK_COUT TK_LL • TK_STRING_LIT

    TK_ID          shift, and go to state 87
    TK_STRING_LIT  shift, and go to state 88


State 65

   39 INICIO_SWITCH: TK_SWITCH '(' • E ')' '{'

    TK_NUM         shift, and go to state 8
    TK_ID          shift, and go to state 59
    TK_LETTER      shift, and go to state 13
    TK_TRUE        shift, and go to state 14
    TK_FALSE       shift, and go to state 15
    TK_FLOAT_LIT   shift, and go to state 17
    TK_NOT         shift, and go to state 18
    TK_STRING_LIT  shift, and go to state 28
    '-'            shift, and go to state 30
    '('            shift, and go to state 32

    VALOR  go to state 49
    E      go to state 89


State 66

   64 E: E • '+' E
   65  | E • '-' E
   66  | E • '*' E
   67  | E • '/' E
   69  | '-' E •
   71  | E • TK_RELACIONAL E
   72  | E • TK_OR E
   73  | E • TK_AND E

    $default  reduce using rule 69 (E)


State 67

   70 E: '(' TIPO • ')' E

    ')'  shift, and go to state 90


State 68

   64 E: E • '+' E
   65  | E • '-' E
   66  | E • '*' E
   67  | E • '/' E
   68  | '(' E • ')'
   71  | E • TK_RELACIONAL E
   72  | E • TK_OR E
   73  | E • TK_AND E

    TK_RELACIONAL  shift, and go to state 77
    TK_OR          shift, and go to state 78
    TK_AND         shift, and go to state 79
    '+'            shift, and go to state 80
    '-'            shift, and go to state 81
    '*'            shift, and go to state 82
    '/'            shift, and go to state 83
    ')'            shift, and go to state 91


State 69

    1 S: INICIO CMDS FINAIS •
    7 CMDS: CMDS FINAIS • CMD
    9 FINAIS: FINAIS • FIM

    TK_NUM         shift, and go to state 8
    TK_ID          shift, and go to state 9
    TK_INT         shift, and go to state 10
    TK_FLOAT       shift, and go to state 11
    TK_CHAR        shift, and go to state 12
    TK_LETTER      shift, and go to state 13
    TK_TRUE        shift, and go to state 14
    TK_FALSE       shift, and go to state 15
    TK_BOOL        shift, and go to state 16
    TK_FLOAT_LIT   shift, and go to state 17
    TK_NOT         shift, and go to state 18
    TK_IF          shift, and go to state 19
    TK_WHILE       shift, and go to state 20
    TK_DO          shift, and go to state 21
    TK_FOR         shift, and go to state 22
    TK_BREAK       shift, and go to state 23
    TK_CONTINUE    shift, and go to state 24
    TK_CIN         shift, and go to state 25
    TK_COUT        shift, and go to state 26
    TK_STRING      shift, and go to state 27
    TK_STRING_LIT  shift, and go to state 28
    TK_SWITCH      shift, and go to state 29
    '-'            shift, and go to state 30
    '\n'           shift, and go to state 1
    ';'            shift, and go to state 2
    '{'            shift, and go to state 31
    '('            shift, and go to state 32

    $default  reduce using rule 1 (S)

    FIM            go to state 55
    CMD            go to state 92
    ABRE_BLOCO     go to state 35
    BLOCO          go to state 36
    IF             go to state 37
    INICIO_WHILE   go to state 38
    WHILE          go to state 39
    INICIO_DO      go to state 40
    DO_WHILE       go to state 41
    ABRE_FOR       go to state 42
    FOR            go to state 43
    INICIO_SWITCH  go to state 44
    SWITCH         go to state 45
    BREAK          go to state 46
    CONTINUE       go to state 47
    TIPO           go to state 48
    VALOR          go to state 49
    CIN            go to state 50
    COUT           go to state 51
    E              go to state 52
    D              go to state 53
    ATRIB          go to state 54


State 70

   28 BLOCO: ABRE_BLOCO INICIO • FECHA_BLOCO
   29      | ABRE_BLOCO INICIO • CMDS FECHA_BLOCO
   30      | ABRE_BLOCO INICIO • CMDS FINAIS FECHA_BLOCO

    TK_NUM         shift, and go to state 8
    TK_ID          shift, and go to state 9
    TK_INT         shift, and go to state 10
    TK_FLOAT       shift, and go to state 11
    TK_CHAR        shift, and go to state 12
    TK_LETTER      shift, and go to state 13
    TK_TRUE        shift, and go to state 14
    TK_FALSE       shift, and go to state 15
    TK_BOOL        shift, and go to state 16
    TK_FLOAT_LIT   shift, and go to state 17
    TK_NOT         shift, and go to state 18
    TK_IF          shift, and go to state 19
    TK_WHILE       shift, and go to state 20
    TK_DO          shift, and go to state 21
    TK_FOR         shift, and go to state 22
    TK_BREAK       shift, and go to state 23
    TK_CONTINUE    shift, and go to state 24
    TK_CIN         shift, and go to state 25
    TK_COUT        shift, and go to state 26
    TK_STRING      shift, and go to state 27
    TK_STRING_LIT  shift, and go to state 28
    TK_SWITCH      shift, and go to state 29
    '-'            shift, and go to state 30
    '{'            shift, and go to state 31
    '}'            shift, and go to state 93
    '('            shift, and go to state 32

    CMDS           go to state 94
    CMD            go to state 34
    ABRE_BLOCO     go to state 35
    FECHA_BLOCO    go to state 95
    BLOCO          go to state 36
    IF             go to state 37
    INICIO_WHILE   go to state 38
    WHILE          go to state 39
    INICIO_DO      go to state 40
    DO_WHILE       go to state 41
    ABRE_FOR       go to state 42
    FOR            go to state 43
    INICIO_SWITCH  go to state 44
    SWITCH         go to state 45
    BREAK          go to state 46
    CONTINUE       go to state 47
    TIPO           go to state 48
    VALOR          go to state 49
    CIN            go to state 50
    COUT           go to state 51
    E              go to state 52
    D              go to state 53
    ATRIB          go to state 54


State 71

   34 WHILE: INICIO_WHILE '(' • E ')' BLOCO

    TK_NUM         shift, and go to state 8
    TK_ID          shift, and go to state 59
    TK_LETTER      shift, and go to state 13
    TK_TRUE        shift, and go to state 14
    TK_FALSE       shift, and go to state 15
    TK_FLOAT_LIT   shift, and go to state 17
    TK_NOT         shift, and go to state 18
    TK_STRING_LIT  shift, and go to state 28
    '-'            shift, and go to state 30
    '('            shift, and go to state 32

    VALOR  go to state 49
    E      go to state 96


State 72

   36 DO_WHILE: INICIO_DO BLOCO • QUEBRAS TK_WHILE '(' E ')'

    $default  reduce using rule 12 (QUEBRAS)

    QUEBRAS  go to state 97


State 73

   80 ATRIB: TK_ID • '=' E
   81      | TK_ID • TK_PP
   82      | TK_ID • TK_MM

    TK_PP  shift, and go to state 56
    TK_MM  shift, and go to state 57
    '='    shift, and go to state 58


State 74

   38 FOR: ABRE_FOR D • ';' E ';' ATRIB ')' QUEBRAS BLOCO

    ';'  shift, and go to state 98


State 75

   40 SWITCH: INICIO_SWITCH INICIO • CASES INICIO '}'

    TK_DEFAULT  shift, and go to state 99
    TK_CASE     shift, and go to state 100

    CASES      go to state 101
    CASE_ITEM  go to state 102


State 76

   77 D: TIPO TK_ID •
   79  | TIPO TK_ID • '=' E

    '='  shift, and go to state 103

    $default  reduce using rule 77 (D)


State 77

   71 E: E TK_RELACIONAL • E

    TK_NUM         shift, and go to state 8
    TK_ID          shift, and go to state 59
    TK_LETTER      shift, and go to state 13
    TK_TRUE        shift, and go to state 14
    TK_FALSE       shift, and go to state 15
    TK_FLOAT_LIT   shift, and go to state 17
    TK_NOT         shift, and go to state 18
    TK_STRING_LIT  shift, and go to state 28
    '-'            shift, and go to state 30
    '('            shift, and go to state 32

    VALOR  go to state 49
    E      go to state 104


State 78

   72 E: E TK_OR • E

    TK_NUM         shift, and go to state 8
    TK_ID          shift, and go to state 59
    TK_LETTER      shift, and go to state 13
    TK_TRUE        shift, and go to state 14
    TK_FALSE       shift, and go to state 15
    TK_FLOAT_LIT   shift, and go to state 17
    TK_NOT         shift, and go to state 18
    TK_STRING_LIT  shift, and go to state 28
    '-'            shift, and go to state 30
    '('            shift, and go to state 32

    VALOR  go to state 49
    E      go to state 105


State 79

   73 E: E TK_AND • E

    TK_NUM         shift, and go to state 8
    TK_ID          shift, and go to state 59
    TK_LETTER      shift, and go to state 13
    TK_TRUE        shift, and go to state 14
    TK_FALSE       shift, and go to state 15
    TK_FLOAT_LIT   shift, and go to state 17
    TK_NOT         shift, and go to state 18
    TK_STRING_LIT  shift, and go to state 28
    '-'            shift, and go to state 30
    '('            shift, and go to state 32

    VALOR  go to state 49
    E      go to state 106


State 80

   64 E: E '+' • E

    TK_NUM         shift, and go to state 8
    TK_ID          shift, and go to state 59
    TK_LETTER      shift, and go to state 13
    TK_TRUE        shift, and go to state 14
    TK_FALSE       shift, and go to state 15
    TK_FLOAT_LIT   shift, and go to state 17
    TK_NOT         shift, and go to state 18
    TK_STRING_LIT  shift, and go to state 28
    '-'            shift, and go to state 30
    '('            shift, and go to state 32

    VALOR  go to state 49
    E      go to state 107


State 81

   65 E: E '-' • E

    TK_NUM         shift, and go to state 8
    TK_ID          shift, and go to state 59
    TK_LETTER      shift, and go to state 13
    TK_TRUE        shift, and go to state 14
    TK_FALSE       shift, and go to state 15
    TK_FLOAT_LIT   shift, and go to state 17
    TK_NOT         shift, and go to state 18
    TK_STRING_LIT  shift, and go to state 28
    '-'            shift, and go to state 30
    '('            shift, and go to state 32

    VALOR  go to state 49
    E      go to state 108


State 82

   66 E: E '*' • E

    TK_NUM         shift, and go to state 8
    TK_ID          shift, and go to state 59
    TK_LETTER      shift, and go to state 13
    TK_TRUE        shift, and go to state 14
    TK_FALSE       shift, and go to state 15
    TK_FLOAT_LIT   shift, and go to state 17
    TK_NOT         shift, and go to state 18
    TK_STRING_LIT  shift, and go to state 28
    '-'            shift, and go to state 30
    '('            shift, and go to state 32

    VALOR  go to state 49
    E      go to state 109


State 83

   67 E: E '/' • E

    TK_NUM         shift, and go to state 8
    TK_ID          shift, and go to state 59
    TK_LETTER      shift, and go to state 13
    TK_TRUE        shift, and go to state 14
    TK_FALSE       shift, and go to state 15
    TK_FLOAT_LIT   shift, and go to state 17
    TK_NOT         shift, and go to state 18
    TK_STRING_LIT  shift, and go to state 28
    '-'            shift, and go to state 30
    '('            shift, and go to state 32

    VALOR  go to state 49
    E      go to state 110


State 84

   64 E: E • '+' E
   65  | E • '-' E
   66  | E • '*' E
   67  | E • '/' E
   71  | E • TK_RELACIONAL E
   72  | E • TK_OR E
   73  | E • TK_AND E
   80 ATRIB: TK_ID '=' E •

    TK_RELACIONAL  shift, and go to state 77
    TK_OR          shift, and go to state 78
    TK_AND         shift, and go to state 79
    '+'            shift, and go to state 80
    '-'            shift, and go to state 81
    '*'            shift, and go to state 82
    '/'            shift, and go to state 83

    $default  reduce using rule 80 (ATRIB)


State 85

   31 IF: TK_IF '(' E • ')' BLOCO
   32   | TK_IF '(' E • ')' BLOCO QUEBRAS TK_ELSE BLOCO
   64 E: E • '+' E
   65  | E • '-' E
   66  | E • '*' E
   67  | E • '/' E
   71  | E • TK_RELACIONAL E
   72  | E • TK_OR E
   73  | E • TK_AND E

    TK_RELACIONAL  shift, and go to state 77
    TK_OR          shift, and go to state 78
    TK_AND         shift, and go to state 79
    '+'            shift, and go to state 80
    '-'            shift, and go to state 81
    '*'            shift, and go to state 82
    '/'            shift, and go to state 83
    ')'            shift, and go to state 111


State 86

   61 CIN: TK_CIN TK_RR TK_ID •

    $default  reduce using rule 61 (CIN)


State 87

   62 COUT: TK_COUT TK_LL TK_ID •

    $default  reduce using rule 62 (COUT)


State 88

   63 COUT: TK_COUT TK_LL TK_STRING_LIT •

    $default  reduce using rule 63 (COUT)


State 89

   39 INICIO_SWITCH: TK_SWITCH '(' E • ')' '{'
   64 E: E • '+' E
   65  | E • '-' E
   66  | E • '*' E
   67  | E • '/' E
   71  | E • TK_RELACIONAL E
   72  | E • TK_OR E
   73  | E • TK_AND E

    TK_RELACIONAL  shift, and go to state 77
    TK_OR          shift, and go to state 78
    TK_AND         shift, and go to state 79
    '+'            shift, and go to state 80
    '-'            shift, and go to state 81
    '*'            shift, and go to state 82
    '/'            shift, and go to state 83
    ')'            shift, and go to state 112


State 90

   70 E: '(' TIPO ')' • E
